try to fix buttons on iphones

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -47,6 +47,7 @@
   .submit:focus {
     outline: none;
     box-shadow: none;
+    border: none;
   }
 }
 .submit_btn:hover {
@@ -58,5 +59,6 @@
 @media (max-width: 979px) {
   .submit_btn:hover {
     outline: none;
+    border: none;
   }
 }
